--- a/favorite.html
+++ b/favorite.html
@@ -31,7 +31,7 @@
     <h2> Activities</h2>
     <table>
         <tr>
-        <td><a href="Index.html">Index</a></td>
+        <td><a href="index.html">Index</a></td>
         </tr>
         <tr><td>Favorite</td></tr>
         <tr>
