--- a/hotspot.html
+++ b/hotspot.html
@@ -30,7 +30,7 @@ color: rgb(255, 255, 255);
     <h1>My Bio</h1>
     <h2>Info</h2>
     <table>
-        <tr><td><a href="Index.html">Index</a></td></tr>
+        <tr><td><a href="index.html">Index</a></td></tr>
     <tr>
     <td><a href="favorite.html">Favorite</a></td> 
     </tr>
