--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@ height="100%"
 <img src = "Image/Selfie.png" alt = "Me" width=300 height=300>
 <video src="Video/Me.MP4" height="300" width= "300" controls>
   </video>
-  <img
-src="Image/copyright.jpg"alt="copyright"width="20%"height="20%">
-
+ <p>&copy; Hang Jiang</p>
 </body>
 </html>
