--- a/hotspot.html
+++ b/hotspot.html
@@ -64,5 +64,6 @@ If you lived in New York City. You must heard of Coney Island.
 </Article>
 </Section>
     </main>
+     <p>&copy; Hang Jiang</p>
 </body>
 </html>
