--- a/favorite.html
+++ b/favorite.html
@@ -45,5 +45,6 @@
         <ol> <li>Computer programming</li> <li>Video Game</li> <li>Sleeping</li> <li>Stargazing</li> </ol>
 <p>Well, what I listed above was a generic list of my favorite hobbies. I love videogame as they shaped part of my childhood and also inspired me to pursue computer programming. Additonally, I am always so sleep deprived that I wish I don't have to go to school and just sleep until 12 pm at noon. Stargazing is amazing. They are so interesting to look at and learn about. In the past(Not NY), I would often be at awe when looking up at the sky.</p>
         </div>
+     <p>&copy; Hang Jiang</p>
     </body>
     </html>
