--- a/skills.html
+++ b/skills.html
@@ -42,6 +42,7 @@
        </form>
 
        <video src="Video/Step.MP4" height="300" width= "300" controls></video>
-        
+         <p>&copy; Hang Jiang</p>
+
         </body>
 </html>
