--- a/hotspot.html
+++ b/hotspot.html
@@ -21,8 +21,8 @@
         }
         .seman
         {
-background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);
+background-color: rgb(156, 221, 223);
+color: rgb(0,0,0);
         }
     </style>
 </head>
